get getInheritedRoleForUser via group metadata